mds: ensure dirfrags are fetched once

Fixes: https://tracker.ceph.com/issues/48517
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>